Closed Bug 402372 Opened 18 years ago Closed 18 years ago

Problems creating and deleting mailing lists in address books.

Categories

(MailNews Core :: Address Book, defect)

defect
Not set
normal

Tracking

(Not tracked)

RESOLVED FIXED

People

(Reporter: standard8, Assigned: standard8)

References

Details

(Keywords: regression)

Attachments

(1 file)

Attached patch The fixSplinter Review
With current trunk I can't delete mailing lists. There's also a bunch of errors thrown on create. Its a regression from bug 394781 - we're trying to get ab databases on mailing lists that happen to not get fully initialized (in terms of pref id). The solution is to use the directory that we're currently in to get the database from, rather than getting the database from the mailing list that gets it from the parent that is the one we were in... Patch attached to fix the regression and make things simpler.
Attachment #287250 - Flags: superreview?(bienvenu)
Attachment #287250 - Flags: review?(bienvenu)
Comment on attachment 287250 [details] [diff] [review] The fix thx, Mark.
Attachment #287250 - Flags: superreview?(bienvenu)
Attachment #287250 - Flags: superreview+
Attachment #287250 - Flags: review?(bienvenu)
Attachment #287250 - Flags: review+
Patch checked in.
Status: NEW → RESOLVED
Closed: 18 years ago
Resolution: --- → FIXED
Product: Core → MailNews Core
You need to log in before you can comment on or make changes to this bug.

Attachment

General

Created:
Updated:
Size: