Bug 402372 Problems creating and deleting mailing lists in address books. r/sr=bienvenu